<resources>
    <string name="app_name">My Calculator</string>
    <string name="button_clear">C</string>
    <string name="button_del">del</string>
    <string name="button_div">/</string>
    <string name="button_multiply">*</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_minus">-</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_plus">+</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="button_calc">=</string>
    <string name="choose_theme_button">Choose theme</string>
    <string name="choose_app_theme">Choose app theme</string>
    <string name="main_theme_choose">Main Theme</string>
    <string name="improved_theme_choose">Improved Theme</string>
    <string name="apply_theme_text">Apply</string>
</resources>