<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/result_screen"
        android:layout_width="@dimen/text_screen_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_screen_margin_bottom"
        android:background="@color/white"
        android:textSize="@dimen/result_text_size"
        app:layout_constraintBottom_toTopOf="@id/grid_layout"
        app:layout_constraintEnd_toEndOf="@id/grid_layout"
        app:layout_constraintStart_toStartOf="@id/grid_layout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/actions_screen"
        android:layout_width="@dimen/text_screen_width"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="@dimen/actions_text_size"
        app:layout_constraintBottom_toTopOf="@id/result_screen"
        app:layout_constraintEnd_toEndOf="@id/result_screen"
        app:layout_constraintStart_toStartOf="@id/result_screen" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_clear"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_clear" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_delete"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_del" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_divide"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_div" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_multiply"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_multiply" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_7"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_8"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_9"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_minus"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_minus" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_4"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_5"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_6"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_plus"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_plus" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_1"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_2"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_3"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_calc"
            android:layout_width="@dimen/button_width"
            android:layout_rowSpan="2"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_calc" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_0"
            android:layout_width="@dimen/button_width"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dot"
            android:layout_width="@dimen/button_width"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button_selector"
            android:text="@string/button_dot" />


    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>